[project]
name = "localeet"
dynamic = [
    "version",
]
description = "A CLI tool to do LeetCode and LeetCode-like exercises"
authors = [
    { name = "Danny Brown", email = "dannybrown37@gmail.com" }
]
dependencies = [
  "requests",
  "bs4",
  "lxml",
]

[project.scripts]
localeet = "localeet:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch]
root = "src"

[tool.hatch.version]
path = "src/localeet/__init__.py"

[tool.hatch.dependencies]
python = ">=3.9"

